Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11915

lldb not allowing stack size more then 20.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 3.1.0
    • Qt Creator 3.1.0-rc1
    • Debugger
    • None
    • Ubuntu
    • 05f72338f3b97a766ffc77cd30c3b1c3fbd60802

      gdb offers '<More>' button in stack view when it exceeds it's maximum. lldb does not.

      I tried to increase the maximum stack depth from default 20 to 40 in Options->Debugger->General, but that not worked.

      I could not find the way to view more then 20 calls.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            shiftz Andrew Shevchenko
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes